# chord-set-transformer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/data/: choco_dataset.py  chords.py  dataset.py  download.py  harte.py
src/models/: classifier.py  modules.py
tests/: test_chords.py  test_dataset.py  test_harte.py  test_model.py
